--- a/fern/pages/welcome.mdx
+++ b/fern/pages/welcome.mdx
@@ -13,7 +13,7 @@ Backblaze provides the following APIs for interacting with B2 Cloud Storage:
   <Card title="B2 Native API" icon="fa-solid fa-code" href="/docs/guides/native-api">
     A custom API for full access to Backblaze B2 Cloud Storage features including file management, bucket operations, and application key management.
   </Card>
-  <Card title="S3-Compatible API" icon="fa-brands fa-aws" href="https://www.backblaze.com/apidocs/introduction-to-the-s3-compatible-api">
+  <Card title="S3-Compatible API" icon="fa-brands fa-aws" href="/docs/guides/s3-compatible-api">
     Interact with Backblaze B2 using Amazon S3 syntax. Most existing S3 applications work out of the box.
   </Card>
   <Card title="Partner API" icon="fa-solid fa-handshake" href="/docs/guides/partner-api">
