--- a/fern/pages/welcome.mdx
+++ b/fern/pages/welcome.mdx
@@ -10,13 +10,13 @@ Backblaze B2 Cloud Storage provides affordable, reliable cloud storage with easy
 Backblaze provides the following APIs for interacting with B2 Cloud Storage:
 
 <Cards>
-  <Card title="B2 Native API" icon="fa-solid fa-code" href="/docs/guides/native-api">
+  <Card title="B2 Native API" icon="fa-solid fa-code" href="/guides/api-guides/b-2-native-api">
     A custom API for full access to Backblaze B2 Cloud Storage features including file management, bucket operations, and application key management.
   </Card>
-  <Card title="S3-Compatible API" icon="fa-brands fa-aws" href="/docs/guides/s3-compatible-api">
+  <Card title="S3-Compatible API" icon="fa-brands fa-aws" href="/guides/api-guides/s3-compatible-api">
     Interact with Backblaze B2 using Amazon S3 syntax. Most existing S3 applications work out of the box.
   </Card>
-  <Card title="Partner API" icon="fa-solid fa-handshake" href="/docs/guides/partner-api">
+  <Card title="Partner API" icon="fa-solid fa-handshake" href="/guides/api-guides/partner-api">
     Programmatically create and manage Backblaze B2 accounts and groups for partner integrations.
   </Card>
 </Cards>
@@ -24,13 +24,13 @@ Backblaze provides the following APIs for interacting with B2 Cloud Storage:
 ## Quick Links
 
 <Cards>
-  <Card title="Quickstart" icon="fa-solid fa-rocket" href="/docs/guides/quickstart">
+  <Card title="Quickstart" icon="fa-solid fa-rocket" href="/guides/getting-started/developer-quickstart">
     Build applications with Backblaze B2 in thirty minutes or less.
   </Card>
-  <Card title="Authentication" icon="fa-solid fa-key" href="/docs/guides/authentication">
+  <Card title="Authentication" icon="fa-solid fa-key" href="/guides/getting-started/authentication">
     Learn how to create application keys and authenticate API requests.
   </Card>
-  <Card title="Error Handling" icon="fa-solid fa-triangle-exclamation" href="/docs/guides/error-handling">
+  <Card title="Error Handling" icon="fa-solid fa-triangle-exclamation" href="/guides/getting-started/error-handling">
     Understand error responses and implement retry strategies.
   </Card>
 </Cards>
